fix: add text align for <ul> elements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,9 @@
   ul {
     font-size: 1.125rem;
     font-weight: 200;
+  }
+
+  p {
     text-align: justify;
   }
 }
